# irsl_docker_irsl_system

files/: docker-compose-linux-gpu.yaml  docker-compose-linux.yaml  docker-compose-win.yaml
userdir/irsl_ros2_ws/src/ros2_gz/: CMakeLists.txt  package.xml
userdir/irsl_ros2_ws/src/ros2_gz/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage2.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
userdir/irsl_ros2_ws/src/ros2_gz/urdf/: turtlebot3_burger.urdf  turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
